run app using command line