@@ -8,7 +8,7 @@ cd ${PROJECT_DIR}/..
 
 echo '$ rm -rf mytarget/ && mkdir -p mytarget/classes && mkdir mytarget/lib-direct'
 echo '###############################################################'
-rm -rf mytarget/ && mkdir -p mytarget/classes && mkdir mytarget/lib-direct
+rm -rf mytarget/ && mkdir -p mytarget/classes && mkdir mytarget/patch-modules/
 
 
 echo '###############################################################'
@@ -18,23 +18,26 @@ mvn dependency:copy-dependencies -DoutputDirectory=mytarget/lib
 
 
 echo '###############################################################'
-echo '$ mv mytarget/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar \
-           mytarget/lib/hibernate-core-5.0.1.Final.jar \
-	   mytarget/lib/slf4j-api-1.7.21.jar \
-	   mytarget/lib/javassist-3.18.1-GA.jar \
-	   mytarget/lib-direct'
+echo '$ mv mytarget/lib/jaxb-runtime-2.3.0.jar mytarget/lib/geronimo-jta_1.1_spec-1.1.1.jar mytarget/patch-modules/'
 echo '###############################################################'
-mv mytarget/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar \
-   mytarget/lib/hibernate-core-5.0.1.Final.jar \
-   mytarget/lib/slf4j-api-1.7.21.jar \
-   mytarget/lib/javassist-3.18.1-GA.jar \
-   mytarget/lib-direct
+mv mytarget/lib/jaxb-runtime-2.3.0.jar mytarget/lib/geronimo-jta_1.1_spec-1.1.1.jar mytarget/patch-modules/
+#   mytarget/lib/hibernate-core-5.0.1.Final.jar \
+#   mytarget/lib/slf4j-api-1.7.21.jar \
+#   mytarget/lib/javassist-3.18.1-GA.jar \
+#   mytarget/lib-direct
 
 
 echo '###############################################################'
-echo '$ javac -d mytarget/classes/ -p mytarget/lib -cp mytarget/lib-direct $(find src/main/java -name "*.java")'
+echo '$ javac -d mytarget/classes/ \
+      --patch-module jaxb.core=mytarget/patch-modules/jaxb-runtime-2.3.0.jar \
+      --patch-module java.sql=mytarget/patch-modules/geronimo-jta_1.1_spec-1.1.1.jar \
+      -p mytarget/lib $(find src/main/java -name "*.java")'
 echo '###############################################################'
-javac -d mytarget/classes/ -p mytarget/lib-direct -cp mytarget/lib $(find src/main/java -name "*.java")
+javac -d mytarget/classes/ \
+      --patch-module jaxb.core=mytarget/patch-modules/jaxb-runtime-2.3.0.jar \
+      --patch-module java.sql=mytarget/patch-modules/geronimo-jta_1.1_spec-1.1.1.jar \
+      -p mytarget/lib $(find src/main/java -name "*.java")
+
 
 echo '###############################################################'
 echo '$ cp src/main/resources/* mytarget/classes/'
@@ -47,16 +50,24 @@ echo '$ jar cf mytarget/cqrs.jar -C mytarget/classes .'
 echo '###############################################################'
 jar cf mytarget/cqrs.jar -C mytarget/classes/ .
 
+
 echo '###############################################################'
-echo '$ java --add-modules java.sql \
-             --add-opens java.base/java.lang=javassist \
-	     -p mytarget/lib-direct:mytarget/cqrs.jar \
-	     -cp "mytarget/lib/*" \
+echo '$ java \
+             --patch-module jaxb.core=mytarget/patch-modules/jaxb-runtime-2.3.0.jar \
+	     --patch-module java.sql=mytarget/patch-modules/geronimo-jta_1.1_spec-1.1.1.jar \
+	     --add-modules jdk.unsupported \
+	     --add-opens java.base/java.lang=javassist \
+	     --add-exports java.sql/javax.transaction=hibernate.core \
+	     -p mytarget/lib:mytarget/cqrs.jar \
 	     -m com.iluwatar.cqrs/com.iluwatar.cqrs.app.App'
 echo '###############################################################'
-java --add-modules java.sql \
+java \
+     --patch-module jaxb.core=mytarget/patch-modules/jaxb-runtime-2.3.0.jar \
+     --patch-module java.sql=mytarget/patch-modules/geronimo-jta_1.1_spec-1.1.1.jar \
+     --add-modules jdk.unsupported \
      --add-opens java.base/java.lang=javassist \
-     -p mytarget/lib-direct:mytarget/cqrs.jar \
-     -cp "mytarget/lib/*" \
+     --add-exports java.sql/javax.transaction=hibernate.core \
+     -p mytarget/lib:mytarget/cqrs.jar \
      -m com.iluwatar.cqrs/com.iluwatar.cqrs.app.App
+     
 
